[tool.poetry]
name = "text-adventure"
version = "0.1.0"
description = ""
authors = ["Rafael Costa Pacheco <24costapachecor@yis.ac.jp>"]
readme = "README.md"

[tool.poetry.scripts]
teagea = "text_adventure.game:entry"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
